Housekeeping and small tweaks.
 - Removed /poll in favour of relying on notifier
 - Reworked DB.query (and MockDB) for async/await
 - Updated ESLint and Istanbul to cope with async/await
 - Figured out a passable way to generate dynamic org lists
 - Removed lintworm.poll_cache, which was garbage

--- a/app/package.json
+++ b/app/package.json
@@ -26,9 +26,8 @@
     "eslint-plugin-standard": "*",
     "eslint-plugin-promise": "*",
     "eslint-config-standard": "*",
-    "istanbul": "~0.4",
+    "istanbul": "next",
     "mocha": "~3.3",
-    "reactify": "~1.1",
     "should": "~11.2",
     "superagent": "~3.5"
   },
