--- a/config/default.json.example
+++ b/config/default.json.example
@@ -14,6 +14,7 @@
     },
     "lint": {
         "rewind_on_startup": 0,
+        "max_allocations": 2,
         "hours_before_quote_required": 1,
         "acceptable_hours_budget_overrun": 3
     },
