Added option to only show updates from clients.

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -18,9 +18,12 @@
         "check_interval_minutes": 60,
         "check_on_startup": false
     },
+    "updates": {
+        "client_only": true
+    },
     "lint": {
         "sweep_interval_minutes": 1,
-        "flush_interval_minutes": 5,
+        "flush_interval_minutes": 15,
         "rewind_on_startup": 0,
         "max_allocations": 2,
         "hours_before_quote_required": 1,
