Split update messages across client channels.

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -8,7 +8,9 @@
     },
     "rocketchat": {
         "lint": null,
-        "updates": null,
+        "update_channels": {
+            "default": null
+        },
         "timesheet": null
     },
     "server": {
