Override channel on send for updates.

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -8,8 +8,9 @@
     },
     "rocketchat": {
         "lint": null,
-        "update_channels": {
-            "default": null
+        "update": null,
+        "channels": {
+            "Customer": "#foo"
         },
         "timesheet": null
     },
