Trim sent-message record periodically.
Also updated tests so config can be overridden.

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -7,6 +7,7 @@
         "port": 5432
     },
     "rocketchat": {
+        "dedup_window_hours": 24,
         "lint": null,
         "update": null,
         "channels": {
