--- a/config/default.json.example
+++ b/config/default.json.example
@@ -14,6 +14,9 @@
         "channels": {
             "Customer": "#foo"
         },
+        "nicks": {
+            "bob@catalyst-eu.net": "@bob"
+        },
         "timesheet": null
     },
     "server": {
@@ -57,8 +60,5 @@
     "log": {
         "file": "-",
         "level": "warn"
-    },
-    "chat_nicks": {
-        "bob@catalyst-eu.net": "@bob"
     }
 }
