--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,9 @@ FROM node:7.8
 
 WORKDIR /opt
 
-COPY *.json *.monkeypatch ./
+COPY *.json *.monkeypatch index.js ./
+COPY lib ./lib/
+COPY config ./config/
 
 RUN npm install
 
