Revert "Isolating app files in preparation for issue #4."
This reverts commit 08bf13a6e7097520bad83f5c346d93f786b3cea3.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,9 +2,7 @@ FROM node:7.8
 
 WORKDIR /opt
 
-COPY *.json *.monkeypatch index.js ./
-COPY lib ./lib/
-COPY config ./config/
+COPY *.json *.monkeypatch ./
 
 RUN npm install
 
