Added updates.only_channels[] config. Closes #10.

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -67,7 +67,7 @@
     },
     "updates": {
         "client_only": true,
-        "stick_to_default_channel": true,
+        "only_channels": ["Company"],
         "mute": false,
         "persona": "katy_purry"
     },
