Tweaking docker build; Reworking response_times.js logic massively.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,11 @@ FROM node:7.8
 
 WORKDIR /opt
 
-COPY *.json *.monkeypatch ./
+COPY *.json *.monkeypatch *.js ./
+
+COPY lib ./lib/
+
+COPY config ./config/
 
 RUN npm install
 
